<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#2B326A"
    android:orientation="vertical"
    tools:context=".SurveyActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/pp_logo"
        android:layout_width="89dp"
        android:layout_height="76dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/pp_logo" />

    <TextView
        android:id="@+id/profile_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold_family"
        android:text="@string/survey_welcome"
        android:textAlignment="center"
        android:textColor="#AAB6E0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/income_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:fontFamily="@font/montserrat_semibold_family"
        android:text="@string/monthly_income_question"
        android:textColor="#AAB6E0"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/income_txtbox"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:importantForAutofill="no"
        android:padding="14dp"
        android:textColor="#000"
        android:textColorHint="#6E79BA" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <TextView
        android:id="@+id/maxsavings_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:fontFamily="@font/montserrat_semibold_family"
        android:text="@string/main_savings_goal"
        android:textColor="#AAB6E0"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/maxsavings_txtbox"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:padding="14dp"
        android:textColor="#000"
        android:textColorHint="#6E79BA" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/minsavings_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:fontFamily="@font/montserrat_semibold_family"
        android:text="@string/minimum_savings_goal"
        android:textAlignment="center"
        android:textColor="#AAB6E0"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/minsavings_txtbox"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:padding="14dp"
        android:textColor="#000"
        android:textColorHint="#6E79BA" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/saveSurveyButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#8695DC"
        android:fontFamily="@font/montserrat_medium"
        android:padding="14dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#DBD4D7" />

</LinearLayout>